# telegrambot-price

./: db.sqlite3  pyproject.toml  requirements.txt
bot_app/api/: urls.py
bot_app/api/serializers/: __init__.py  messageserializer.py
bot_app/api/views/: __init__.py  view.py
bot_app/logic/: telegram_client.py
kernel/: settings.py  urls.py
